# Hybrid-Recommendor-System

./: .gitignore  Makefile  README.md  Spotify_Collaborative_Filtering.ipynb  app.py  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Spotify_Collaborative_Filtering.ipynb  Spotify_Content_Based_Filtering.ipynb
src/data/: data_ingestion.py  data_preprocessing.py
src/features/: feature_engineering_songs.py  feature_engineering_users.py
src/model/: collaburative_recommendations.py  content_recommendations.py  hybrid_recommendations.py
