[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hybrid_recommender_system"
version = "0.0.1"
description = "This is a project to build a hybrid recommender system, which combines the strengths of content-based filtering and collaborative filtering."
authors = [
  { name = "Shriram Vibhute" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["hybrid_recommender_system"]
force_sort_within_sections = true


